@@ -1,5 +1,4 @@
 Current {
-	* Check if DrawTextBoxedEx works correctly.
 }
 
 Backlog {
